Modernização Codigo e Aplicação Weld

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>jidefx-fields</artifactId>
             <version>0.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.5.1</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
