--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,17 @@
             <artifactId>weld-se-shaded</artifactId>
             <version>3.0.0.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.weld.se</groupId>
+            <artifactId>weld-se</artifactId>
+            <version>2.4.0.Final</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.gluonhq</groupId>
+            <artifactId>ignite-guice</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
